kubernetes/base/apps/home-automation/frigate/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frigate
  namespace: home-automation
  labels:
    app: frigate
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 5000
      targetPort: http
      protocol: TCP
    - name: rtsp
      port: 8554
      targetPort: rtsp
      protocol: TCP
    - name: webrtc-tcp
      port: 8555
      targetPort: webrtc-tcp
      protocol: TCP
  selector:
    app: frigate
